--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
